@@ -1,0 +1,18 @@
+RSpec::Core::ExampleGroup.instance_eval do
+  let(:mock_artist) { Spotify.mock_artist("Jem", true) }
+  let(:mock_album)  { Spotify.mock_album("Finally Woken", mock_artist, 2004, "DEADBEEFDEADBEEFDEAD", :single, true, true) }
+  let(:mock_user)   { Spotify.mock_user("burgestrand", "Burgestrand", "Kim Burgestrand", "https://secure.gravatar.com/avatar/b67b73b5b1fd84119ec788b1c3df02ad", :none, true) }
+  let(:mock_image)  { Spotify.mock_image(mock_image_id, :jpeg, File.size(fixture_image_path), File.read(fixture_image_path), :ok) }
+  let(:mock_track) do
+    track = nil
+    FFI::MemoryPointer.new(:pointer) do |ary|
+      ary.write_pointer mock_artist
+      track = Spotify.mock_track("They", 1, ary, mock_album, 123_456, 42, 2, 7, 0, true)
+    end
+    track
+  end
+
+  let(:mock_image_hex) { "3ad93423add99766e02d563605c6e76ed2b0e450" }
+  let(:mock_image_id)  { ":\xD94#\xAD\xD9\x97f\xE0-V6\x05\xC6\xE7n\xD2\xB0\xE4P" }
+  let(:null_pointer)   { FFI::Pointer.new(0) }
+end
